// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchInput renders default input 1`] = `
.c2 {
  display: inline-block;
  width: 100%;
  padding: 14px 16px 14px calc(16px + 16px + 8px);
  background-color: transparent;
  color: rgba(255,255,255,1);
  border: 0;
  font-size: 16px;
}

.c2:focus {
  background-color: rgba(255,255,255,1);
  color: rgba(38,38,38,1);
  outline: 0;
}

.c2:focus::-webkit-input-placeholder {
  color: #26262699;
}

.c2:focus::-moz-placeholder {
  color: #26262699;
}

.c2:focus:-ms-input-placeholder {
  color: #26262699;
}

.c2:focus::placeholder {
  color: #26262699;
}

.c2::-webkit-input-placeholder {
  color: rgba(255,255,255,1);
}

.c2::-moz-placeholder {
  color: rgba(255,255,255,1);
}

.c2:-ms-input-placeholder {
  color: rgba(255,255,255,1);
}

.c2::placeholder {
  color: rgba(255,255,255,1);
}

.c2::-ms-clear {
  display: none;
}

.c2::-webkit-search-cancel-button {
  display: none;
}

.c0 {
  position: relative;
  width: 100%;
  height: auto;
  border-radius: 2px;
  overflow: hidden;
  outline: 0;
  border: 0;
  color: rgba(255,255,255,1);
  background-color: rgba(255,255,255,0.2);
}

.c1 {
  position: absolute;
  top: 0;
  bottom: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 16px;
  color: rgba(255,255,255,1);
}

.search--focus .c1 {
  color: rgba(38,38,38,1);
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <svg
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fill="none"
        fillRule="evenodd"
      >
        <path
          d="M16 0H0v16h16z"
        />
        <path
          d="M12 6.5a5.5 5.5 0 1 0-11 0 5.5 5.5 0 0 0 11 0zm-.564 4.229l4.418 4.417a.5.5 0 0 1-.708.708l-4.417-4.418a6.5 6.5 0 1 1 .707-.707z"
          fill="#262626"
          fillOpacity=".5"
          fillRule="nonzero"
        />
      </g>
    </svg>
  </div>
  <input
    className="c2"
    onBlur={[Function]}
    onFocus={[Function]}
    type="search"
  />
</div>
`;

exports[`SearchInput renders inverted input 1`] = `
.c2 {
  display: inline-block;
  width: 100%;
  padding: 14px 16px 14px calc(16px + 16px + 8px);
  background-color: transparent;
  color: rgba(38,38,38,1);
  border: 0;
  font-size: 16px;
}

.c2:focus {
  background-color: rgba(255,255,255,1);
  color: rgba(38,38,38,1);
  outline: 0;
}

.c2:focus::-webkit-input-placeholder {
  color: #26262699;
}

.c2:focus::-moz-placeholder {
  color: #26262699;
}

.c2:focus:-ms-input-placeholder {
  color: #26262699;
}

.c2:focus::placeholder {
  color: #26262699;
}

.c2::-webkit-input-placeholder {
  color: #26262699;
}

.c2::-moz-placeholder {
  color: #26262699;
}

.c2:-ms-input-placeholder {
  color: #26262699;
}

.c2::placeholder {
  color: #26262699;
}

.c2::-ms-clear {
  display: none;
}

.c2::-webkit-search-cancel-button {
  display: none;
}

.c0 {
  position: relative;
  width: 100%;
  height: auto;
  border-radius: 2px;
  overflow: hidden;
  outline: 0;
  border: 1px solid #bfbfbf;
  color: rgba(38,38,38,1);
  background-color: rgba(255,255,255,1);
}

.c1 {
  position: absolute;
  top: 0;
  bottom: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 16px;
  color: rgba(38,38,38,1);
}

.search--focus .c1 {
  color: rgba(38,38,38,1);
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <svg
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fill="none"
        fillRule="evenodd"
      >
        <path
          d="M16 0H0v16h16z"
        />
        <path
          d="M12 6.5a5.5 5.5 0 1 0-11 0 5.5 5.5 0 0 0 11 0zm-.564 4.229l4.418 4.417a.5.5 0 0 1-.708.708l-4.417-4.418a6.5 6.5 0 1 1 .707-.707z"
          fill="#262626"
          fillOpacity=".5"
          fillRule="nonzero"
        />
      </g>
    </svg>
  </div>
  <input
    className="c2"
    onBlur={[Function]}
    onFocus={[Function]}
    type="search"
  />
</div>
`;

exports[`SearchInput renders slim & inverted input 1`] = `
.c2 {
  display: inline-block;
  width: 100%;
  padding: 9px 12px 9px calc(12px + 12px + 10px);
  background-color: transparent;
  color: rgba(38,38,38,1);
  border: 0;
  font-size: 14px;
}

.c2:focus {
  background-color: rgba(255,255,255,1);
  color: rgba(38,38,38,1);
  outline: 0;
}

.c2:focus::-webkit-input-placeholder {
  color: #26262699;
}

.c2:focus::-moz-placeholder {
  color: #26262699;
}

.c2:focus:-ms-input-placeholder {
  color: #26262699;
}

.c2:focus::placeholder {
  color: #26262699;
}

.c2::-webkit-input-placeholder {
  color: #26262699;
}

.c2::-moz-placeholder {
  color: #26262699;
}

.c2:-ms-input-placeholder {
  color: #26262699;
}

.c2::placeholder {
  color: #26262699;
}

.c2::-ms-clear {
  display: none;
}

.c2::-webkit-search-cancel-button {
  display: none;
}

.c0 {
  position: relative;
  width: 100%;
  height: 36px;
  border-radius: 4px;
  overflow: hidden;
  outline: 0;
  border: 1px solid #bfbfbf;
  color: rgba(38,38,38,1);
  background-color: rgba(255,255,255,1);
}

.c1 {
  position: absolute;
  top: 0;
  bottom: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 12px;
  color: rgba(38,38,38,1);
}

.search--focus .c1 {
  color: rgba(38,38,38,1);
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <svg
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fill="none"
        fillRule="evenodd"
      >
        <path
          d="M16 0H0v16h16z"
        />
        <path
          d="M12 6.5a5.5 5.5 0 1 0-11 0 5.5 5.5 0 0 0 11 0zm-.564 4.229l4.418 4.417a.5.5 0 0 1-.708.708l-4.417-4.418a6.5 6.5 0 1 1 .707-.707z"
          fill="#262626"
          fillOpacity=".5"
          fillRule="nonzero"
        />
      </g>
    </svg>
  </div>
  <input
    className="c2"
    onBlur={[Function]}
    onFocus={[Function]}
    type="search"
  />
</div>
`;

exports[`SearchInput renders slim input 1`] = `
.c2 {
  display: inline-block;
  width: 100%;
  padding: 9px 12px 9px calc(12px + 12px + 10px);
  background-color: transparent;
  color: rgba(255,255,255,1);
  border: 0;
  font-size: 14px;
}

.c2:focus {
  background-color: rgba(255,255,255,1);
  color: rgba(38,38,38,1);
  outline: 0;
}

.c2:focus::-webkit-input-placeholder {
  color: #26262699;
}

.c2:focus::-moz-placeholder {
  color: #26262699;
}

.c2:focus:-ms-input-placeholder {
  color: #26262699;
}

.c2:focus::placeholder {
  color: #26262699;
}

.c2::-webkit-input-placeholder {
  color: rgba(255,255,255,1);
}

.c2::-moz-placeholder {
  color: rgba(255,255,255,1);
}

.c2:-ms-input-placeholder {
  color: rgba(255,255,255,1);
}

.c2::placeholder {
  color: rgba(255,255,255,1);
}

.c2::-ms-clear {
  display: none;
}

.c2::-webkit-search-cancel-button {
  display: none;
}

.c0 {
  position: relative;
  width: 100%;
  height: 36px;
  border-radius: 4px;
  overflow: hidden;
  outline: 0;
  border: 0;
  color: rgba(255,255,255,1);
  background-color: rgba(255,255,255,0.2);
}

.c1 {
  position: absolute;
  top: 0;
  bottom: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 12px;
  color: rgba(255,255,255,1);
}

.search--focus .c1 {
  color: rgba(38,38,38,1);
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <svg
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fill="none"
        fillRule="evenodd"
      >
        <path
          d="M16 0H0v16h16z"
        />
        <path
          d="M12 6.5a5.5 5.5 0 1 0-11 0 5.5 5.5 0 0 0 11 0zm-.564 4.229l4.418 4.417a.5.5 0 0 1-.708.708l-4.417-4.418a6.5 6.5 0 1 1 .707-.707z"
          fill="#262626"
          fillOpacity=".5"
          fillRule="nonzero"
        />
      </g>
    </svg>
  </div>
  <input
    className="c2"
    onBlur={[Function]}
    onFocus={[Function]}
    type="search"
  />
</div>
`;
